--- a/shikumi/index.html
+++ b/shikumi/index.html
@@ -3,18 +3,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="login_style.css">
-    <link rel="stylesheet" type="text/css" href="sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/login_style.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
 
-	<link rel="icon" href="gfx/favicon.ico" type="image/vnd.microsoft.icon">
+	<link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 	<title> shikumi </title>
-
-
-
-
 </head>
 
 <body>
@@ -28,7 +24,7 @@
 
 <nav>
 	<section class="nav-container">
-			<aside class="logo"><img src="gfx/logo.png"></aside>
+			<aside class="logo"><img src="img/logo.png"></aside>
 			<aside class="menu">
 				<div class="menu-content">
 					<a href="#" id="login">Login</a> | <a href="#">Register</a>
